// -----------------Patrik Zelenak & Milos Drutarovsky --------------
// ---------------------------version 0.0.1 -------------------------
// --------------------------- 11-10-2023 ---------------------------
// ******************************************************************


13.3.
zmenil som nevratove typy RISTRETTO_OK/ERROR atd..

9.3.
vela cisteni, no verzie som velmi neupdatoval islo skor o kozmetice upravy

7.3.2024:
precistenie + dodanie hlaviciek a komentarov

21.2:
mensie upravy vo vypise + todo -> treba skontrolovat typy premennych
a zamenit size_t, int tam kde to treba...<br>

11-14.2 DONE:
Teraz mozeme skompilovat main.c alebo test.c,
co zavisi od `make all` / `make test` prikazu.<br>
buffer-cleaning, <br>
v nejakej funckii je nepouzity rng... toto zmen cez define napr. resp sa kukni ci treba menit.. -> fixed, flags v `main_config.h`<br>
clien-server simulacia<br>
vyhodit nepotrebne subory,<br>
urob lepsie testy, ako v ristertte255<br>
lepsie popisat subory<br>
dat const do params kde to treba<br>

<br>
v aktualnej verzii prekladame kody cez make
make all: -> prelozi `main.c` kde je viacmenej bordel a sluzi na moje testovanie funkcii zatial <br>
make test: -> prelozi `test.c` co je test na test. vektoroch <br>
make simulation: -> prelozi `opaque_in_details/opaque_simulation.c` co je step-by-step simulacia regstracie a prihlasenia.<br>

TODO:
vytvorit kniznicu<br>
update hlaviciek<br>


22.12 TODO:
buffer-cleaning, 
clinet-server na WIN, -> optional not needed 
podavat konstanty kde treba, 
vyhodit nepotrebne subory,
vytvorit kniznicu,
check grammar


14.12 DONE:
registration detailed description
following text to login phase
dokoncit login phase description
summary_of_opaque - registration stage
+ summary_of_opaque - login stage

14.12 TODO:
buffer-cleaning, 
clinet-server na WIN,
podavat konstanty kde treba, 
lepsia dokumentacia kodu,
vyhodit nepotrebne subory,
vytvorit kniznicu,
check grammar
+ summary_of_opaque - login stage

14.12 DONE: