@@ -12,6 +12,7 @@
 
 13.3.
 zmenil som nevratove typy RISTRETTO_OK/ERROR atd..
+simulation.c  - minor changes due to return types
 
 9.3.
 vela cisteni, no verzie som velmi neupdatoval islo skor o kozmetice upravy
